<resources>
    <string name="app_name" translatable="false">BorkinRoads</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="breed">Breed</string>
    <string name="ppofdoggo">ppofdoggo</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="birthday">BDay</string>
    <string name="female">Female</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BorkinRoads</string>
    <string name="nav_header_subtitle">GitBusters: https://github.com/GitBusting/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="male">Male</string>
    <string name="birth_date">Birth Date</string>
    <string name="create">CREATE</string>
    <string name="pet_button">petButton</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="go_on_a_walk">Go On A Walk</string>
    <string name="my_routes">My Routes</string>
    <string name="warning">You need to fill all the input spaces</string>
    <string name="favourites">Favourites</string>
    <string name="lake_river_sea">Lake/River/Sea</string>
    <string name="park_forest">Park/Forest</string>

    <string name="rating">Rating</string>
    <string name="route_used">Number Of times Route is used</string>
    <string name="using_time">Last time when route is used</string>
    <string name="estimated_time">Estimated duration of route</string>
    <string name="descending">DESCENDING</string>
    <string name="ascending">ASCENDING</string>
    <string name="estimated_route_duration">Estimated Route Duration:</string>
    <string name="less_than">less than</string>
    <string name="greater_than">greater than</string>
    <string name="reset_path">Reset Path</string>
    <string name="generate_path_button">Generate Path Button</string>
    <string name="expand_button">expand button</string>
    <string name="favorite_button">favorite button</string>
    <string name="stop">Stop</string>
    <string name="start_route">Start Route</string>
    <string name="estimated_time2">Estimated Time:</string>
    <string name="title_activity_map">BorkinRoads</string>
    <string name="title_activity_main">BorkinRoads</string>
    <string name="title_activity_register">RegisterRoads</string>
    <string name="bathbutton">bathbutton</string>
    <string name="vetbutton">vetbutton</string>
    <string name="walkbutton">walkbutton</string>
    <string name="com_auth0_client_id">YOUR_CLIENT_ID</string>
    <string name="com_auth0_domain">YOUR_DOMAIN</string>

    <string-array name="sorting_conditions">
        <item>@string/rating</item>
        <item>@string/route_used</item>
        <item>@string/using_time</item>
        <item>@string/estimated_time</item>
    </string-array>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_friend_text">Search For a Friend</string>
    <string name="friend_list">Friend List</string>
    <string name="search_for_a_friend_text_hint">Search for a user...</string>
    <string name="your_friends_title">Your Friends</string>
</resources>
